--- a/index.html
+++ b/index.html
@@ -7,6 +7,28 @@
     <link rel="stylesheet" href="src/output.css">
 </head>
 <body>
-    
+    <!-- hero section start -->
+    <section id="home" class="pt-36">
+        <div class="container">
+            <div class="flex flex-wrap">
+                <div class="w-full self-center px-4">
+                    <h1 class="text-base font-semibold text-prymary">Hallo Semua 👋, saya <span class="block font-bold text-dark text-4xl mt-1">Ndharu Widjayanto</span></h1>
+                    <h2 class="font-medium text-slate-500 text-lg mb-5">Teacher Electrical Engineering</h2>
+                    <p class="font-medium text-slate-400 mb-10 leading-relaxed">seorang yang ingin selalu lebih baik dari hari kemarin</p>
+
+                    <a href="#" class="text-base font-semibold text-white bg-prymary py-3 px-8 rounded-full hover:shadow-lg hover:opacity-80 transition duration-300 ease-in-out">Hubungi saya</a>
+                </div>
+
+                <div>
+                    <div class="w-full self-end px-4">
+                        <div class="mt-10">
+                            <img src="" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- hero section end -->
 </body>
 </html>
